--- a/compose.yaml
+++ b/compose.yaml
@@ -37,27 +37,29 @@ services:
 
   kafka:
     image: bitnami/kafka:latest
+    container_name: kafka
+    ports:
+      - "9092:9092"
+      - "9093:9093"
     environment:
+      KAFKA_CFG_NODE_ID: 0
       KAFKA_CFG_PROCESS_ROLES: broker,controller
-      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-      KAFKA_CFG_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@localhost:9093
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
       KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CFG_LISTENER_NAME_INTERNAL: CONTROLLER
-      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
-      KAFKA_KRAFT_CLUSTER_ID: L5+YvX25k2F7WYz5bz1xyw==
-      KAFKA_CFG_NODE_ID: 1
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_KRAFT_CLUSTER_ID: kraft-cluster-1
       ALLOW_PLAINTEXT_LISTENER: "yes"
-    ports:
-      - "9092:9092" # Client port
-      - "9093:9093" # Internal controller port
-    networks:
-      - kafka-net
+    volumes:
+      - kafka-data:/bitnami/kafka
+
 
 volumes:
   postgres_data:
   mongo_data:
   redis_data:
+  kafka-data:
 
 networks:
   kafka-net:
